--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,15 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/Users/stacyzhang/Downloads/selenium-java-3/libs/byte-buddy-1.8.15.jar"/>
 	<classpathentry kind="lib" path="/Users/stacyzhang/Downloads/selenium-java-3/libs/commons-exec-1.3.jar"/>
 	<classpathentry kind="lib" path="/Users/stacyzhang/Downloads/selenium-java-3/libs/guava-25.0-jre.jar"/>
@@ -13,5 +18,10 @@
 	<classpathentry kind="lib" path="/Users/stacyzhang/Downloads/selenium-java-3/libs/okio-1.14.0.jar"/>
 	<classpathentry kind="lib" path="/Users/stacyzhang/Downloads/selenium-java-3/client-combined-3.141.59-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/stacyzhang/Downloads/selenium-java-3/client-combined-3.141.59.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
